도커 세팅 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,5 @@ services:
       - host.docker.internal:host-gateway 
     volumes:
       - ./react-nodejs-docker:/app
+    environment:
+      - CHOKIDAR_USEPOLLING=true
