--- a/react-nodejs-docker/package.json
+++ b/react-nodejs-docker/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "react-hot-loader": "^4.13.1"
   }
 }
