--- a/react-nodejs-docker/server/package.json
+++ b/react-nodejs-docker/server/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^4.18.2",
+    "swagger-ui-express": "^4.6.2"
   }
 }
