--- a/react-nodejs-docker/server/package.json
+++ b/react-nodejs-docker/server/package.json
@@ -5,5 +5,12 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^4.18.2",
     "swagger-ui-express": "^4.6.2"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
