--- a/react-nodejs-docker/server/package.json
+++ b/react-nodejs-docker/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "mysql2": "^3.2.4",
     "puppeteer": "^19.8.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^4.18.2",
